--- a/WeAtk/manifest.plist
+++ b/WeAtk/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://b1gworld.cn/ios/ipa.ipa</string>
+					<string>https://down.leyou920.com/ios/ipa.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
